<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dana.widyamass.dmovies.ui.detail.DetailMovieActivity">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_movie_title" />

        <TextView
            android:id="@+id/tv_detail_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackgroundTitle"
            android:text="@string/title_movie"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="30sp"
            android:textColor="@color/colorTextTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_detail_movie_poster"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_title"
            app:srcCompat="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/tv_detail_movie_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="20sp"
            android:text="@string/date_movie"
            app:layout_constraintStart_toEndOf="@+id/img_detail_movie_poster"
            app:layout_constraintTop_toTopOf="@+id/img_detail_movie_poster" />

        <TextView
            android:id="@+id/tv_detail_movie_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/duration_movie"
            android:textStyle="bold|italic"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_movie_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_date" />

        <TextView
            android:id="@+id/tv_detail_movie_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/movie_rate"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_movie_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_duration" />

        <ToggleButton
            android:id="@+id/btn_detail_movie_favorite"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textOff="@string/btnFavorite"
            android:textOn="@string/btnUnfavorite"
            android:background="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_movie_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_rate" />

        <TextView
            android:id="@+id/tv_detail_movie_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="15sp"
            android:text="@string/movieSynopsis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_detail_movie_poster" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_movie_overview" />

        <TextView
            android:id="@+id/tv_text_trailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/trailers"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_list_movie_trailer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_text_trailer"
            app:layout_constraintTop_toBottomOf="@id/tv_text_trailer" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>